Fetch info from branch (#2)
backup service